# PARCtorch

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README_DEV.md  SPADE  build.sh  jacks_testbook.ipynb  pyproject.toml  requirements.txt  xinlun_testbook.ipynb
.github/workflows/: python-app.yml  python-publish.yml
Data/: Normalization.py  burgers_min_max.json
Demos/: EnergeticMaterials.ipynb  NavierStokes.ipynb
Differentiator/: Advection.py  Differentiator.py  Diffusion.py  FiniteDifference.py  MappingAndRecon.py
Differentiator/.ipynb_checkpoints/: Advection-checkpoint.py  Diffusion-checkpoint.py  FiniteDifference-checkpoint.py  MappingAndRecon-checkpoint.py
Integrator/: Euler.py  Heun.py  Integrator.py  Poisson.py  RK4.py
Integrator/.ipynb_checkpoints/: Poisson-checkpoint.py
PARCtorch/: DPARC.py  PARCv2.py  jacks_testbook.ipynb  model.py  train.py  xinlun_testbook.ipynb
PARCtorch/autoencoder/: autoencoder.py  train.py  utils.py
PARCtorch/data/: README.md  dataset.py  normalization.py  (+2 more)
Utilities/: ResNet.py
data/: dataset.py  hmx_min_max.json  ns_min_max.json
demos/: Burgers.ipynb
differentiator/: advection.py  differentiator.py  diffusion.py  finitedifference.py  mappingandrecon.py
examples/: NavierStokes.ipynb
integrator/: euler.py  heun.py  integrator.py  poisson.py  rk4.py
tests/: conftest.py  datasets.py  test_built_in_datasets.py  test_datasets.py  test_datasets_hd2ds.py  test_interface.py  test_latentparc.py  test_load.py  test_model.py  test_normalization.py  xinlun_testbook.ipynb
utilities/: resnet.py  spade.py  unet.py
(+60 files in other folders)
