[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PARCtorch"
version = "0.3.0"
authors = [
  { name="Xinlun Cheng", email="xc7ts@virginia.edu" },
  { name="Jack Beerman", email="jtb3sud@virginia.edu" },
  { name="Stephen Baek", email="baek@virginia.edu" },
]
description = "Physics-aware Recurrent Convolutional Neural Networks (PARCv2) in PyTorch"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
adjoint = ["torchdiffeq"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
line-length = 79

[project.urls]
Homepage = "https://github.com/baeklab/PARCtorch"
Issues = "https://github.com/baeklab/PARCtorch/issues"
